# arm_control

./: .gitignore  SYSTEM_SUMMARY.md  camera_parameters  clean_github.sh  clean_hospital_medicine.db  execution_workflow_diagram.md  openai_api  package_path  pharmacy_test_main.py  readme_hand_eye  rviz.rviz  start.sh  system_architecture_diagram.md  typescript
Grounded_SAM2_ROS2/: .gitattributes  README.md  build_env.sh
Grounded_SAM2_ROS2/docker/ubuntu/: build.sh  dockerfile  run.sh
Grounded_SAM2_ROS2/install/SAM-2/share/SAM-2/: package.sh
Grounded_SAM2_ROS2/install/groundedsam2/lib/groundedsam2/: service  test_client  test_service
Grounded_SAM2_ROS2/log/: latest_build
Grounded_SAM2_ROS2/src/groundedsam2/: package.xml  setup.cfg  setup.py
Grounded_SAM2_ROS2/src/groundedsam2/groundedsam2/: grounded_sam2_service.py  test_grounded_sam2_service.py
Grounded_SAM2_ROS2/src/groundedsam2/test/: test_grounded_sam2.py
Grounded_SAM2_ROS2/src/interface/: CMakeLists.txt  package.xml
TM_Rail/: test_loop.sh  tm_rail_config.yaml  update_vscode_path.py
TM_Rail/Firmware/: platformio.ini
TM_Rail/Firmware/receiver/: config.yaml  tm_rail_communication.py
TM_Rail/Firmware/src/: linear_stepper.cpp  linear_stepper.hpp  main.cpp  serial_packet.cpp  serial_packet.hpp
TM_Rail/src/tm_rail/: package.xml  setup.py
TM_Rail/src/tm_rail/tm_rail/: rail_node.py  tm_mark.py
TM_Rail/src/tm_rail_interface/: package.xml
TM_Rail/src/tm_rail_interface/msg/: Status.msg
docker/: Dockerfile  build.sh  run.sh  run_multi.sh
extra_package/llm_drug_identification_system/: README.md  main.py
extra_package/llm_drug_identification_system/drug_database/: no000001.yaml
extra_package/llm_drug_identification_system/ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
extra_package/llm_drug_identification_system/ros2_ws/src/interfaces/srv/: DrugIdentify.srv
log/: latest_build
scripts/: colcon_build.sh  start_grab.sh  start_main.sh  start_ui.sh  start_visual.sh
tm_robot/: .gitignore  README_Complete_System.md  README_Simple_System.md  easyocr_text.txt  tesseract_ocr_result.txt  test copy.sh  test.sh  tm_rail_config.yaml
tm_robot/grab/: CMakeLists.txt  package.xml
tm_robot/launch/: complete_pharmacy_system.launch.py  simple_pharmacy_system.launch.py
tm_robot/src/graspnet/: README_Enhanced_Grasp.md  package.xml  setup.cfg  setup.py
tm_robot/src/graspnet/graspnet/: aruco_check.py  camera2base.py  camera2ee.py  demo.py  enhanced_small_object_grasp.py  grab_detect.py  grab_detect_temp.py  groundsam.py  intrinsic_matrix.py  moveit_grab_test.py  small_object_config.yaml  smart_object_classifier.py  take_picture.py  test_enhanced_grasp.py  test_grab_detect.py  test_shelf.py  yolo_mask.py
tm_robot/src/graspnet/graspnet/sample_data/: meta.mat
tm_robot/src/graspnet/launch/: enhanced_grasp_system.launch.py
tm_robot/src/graspnet/resource/: meta.mat
tm_robot/src/locate/: package.xml  setup.cfg  setup.py
tm_robot/src/locate/locate/: fix_shelf.py  shelf.py  slider.py
tm_robot/src/second_camera/: CMakeLists.txt  package.xml
tm_robot/src/second_camera/src/: second_camera.cpp
tm_robot/src/sql/: init_db.py  main.py  medicine.db  run.sh
tm_robot/src/sql/hospital_datebase/: database.py
tm_robot/src/suction_point_detection/: README.md  package.xml  setup.cfg  setup.py
tm_robot/src/suction_point_detection/suction_point_detection/: ransac.py  test_ransac.py
tm_robot/src/tm_msgs/: package.xml
tm_robot/src/tm_msgs/srv/: SetPositions.srv
tm_robot/src/tm_rail/: setup.cfg  setup.py
tm_robot/src/tm_rail/launch/: tm_rail_launch.py
tm_robot/src/tm_rail/tm_rail/: rail_node.py  tm_rail_communication.py
tm_robot/src/tm_rail_interface/: CMakeLists.txt
tm_robot/src/tm_rail_interface/srv/: RailControl.srv
tm_robot/src/tm_robot_if/: CMakeLists.txt  package.xml
tm_robot/src/tm_robot_if/srv/: ArmMove.srv  CaptureImage.srv  DrugIdentify.srv  GetNextOrder.srv  LastCheck.srv  OrderID.srv  Paddle.srv  PoseSrv.srv  SecondCamera.srv  SetPositions.srv  TMFlowMode.srv
tm_robot/src/tm_robot_main/: package.xml  setup.cfg  setup.py
tm_robot/src/tm_robot_main/launch/: grab_service_launch.py  location_service_launch.py  main_service_launch.py  other_service.py  visual_service_launch.py
tm_robot/src/tm_robot_main/tm_robot_main/: borad_position.yaml  integrated_robot_system.py  integrated_vision_system.py  main_control.py  medicine_info.yaml  medicine_sort.yaml  order_process.py  order_service.py  pharmacy_system_orchestrator.py  robot_base_point.yaml  simple_pharmacy_system.py  slider_simple.py  step_flow.yaml  system_config.yaml  tm_flow_mode.py  user_interface.code-workspace  vision_config.yaml
tm_robot/src/user_callback/: package.xml  setup.cfg  setup.py
tm_robot/src/user_callback/user_callback/: order_listen.py
tm_robot/src/user_interface/: clean_hospital_medicine.db  clean_hospital_system.py  insert_data.py  insert_dataset.py  main.py
tm_robot/src/user_interface/database/: database.py  pharmacy_db.py  pharmacy_models.py
tm_robot/src/user_interface/route/: routes_medicine.py  routes_orders.py
tm_robot/src/visuial/: package.xml  setup.cfg  setup.py
tm_robot/src/visuial/visuial/: aruco_check.py  double_check.py  kinect_camera.py  medicine_check_service.py  medicine_check_test.py  medicine_info1.yaml  medicine_info2.yaml  ocr.py  paddleocr.py  realsense.py  second_camera.py  socket_receive.py  test_ocr.py  yolo_mask.py
藥物貼紙/: 0723.pptx
(+82 files in other folders)
