<?xml version="1.0"?>
<package format="3">
  <name>second_camera</name>
  <version>0.0.1</version>
  <description>FlyCapture2 camera streaming and capture</description>

  <maintainer email="jimmyjimmyhuang1114@gmail.com">work</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
